fix: correct letter-spacing for titles

--- a/style.css
+++ b/style.css
@@ -185,8 +185,8 @@ line-height: 18px;
 color:#666d89;
 font-weight: 900;
 text-align: left;
-letter-spacing: 0.2px;
-/* letter-spacing: -0.2px; */
+/* letter-spacing: 0.2px; */
+letter-spacing: -0.2px;
 margin-bottom: 27px;
 }
 .text{
@@ -220,6 +220,9 @@ padding:68px 0 30px;
 }
 .services__header{
     margin-bottom: 45px;
+}
+.services__title{
+    letter-spacing: 0px;
 }
 .columns-3{
 display:flex;
@@ -286,6 +289,9 @@ padding:68px 0 67px;
 }
 .portfolio__header{
     margin-bottom: 11px;
+}
+.portfolio__title{
+    letter-spacing: 0.2px;
 }
 .portfolio__tagbox{
 width: 288px;
@@ -498,14 +504,14 @@ margin-bottom: 9px;
 }
 .get-a-quote__description{
 color: #f0d8d9;
-line-height: 22px;
-margin-bottom: 20px;
+/* line-height: 22px; */
+margin-bottom: 24px;
 text-align: justify;
 }
 .get-a-quote a{
 display:block;
 text-decoration: none;
-letter-spacing: -0.1px;
+/* letter-spacing: -0.1px; */
 color: #f0d8d9;
 background-repeat: no-repeat; 
 padding-left: 23px;
